Truncate long filenames in notifications, fixes #151

--- a/app/styles/ui.scss
+++ b/app/styles/ui.scss
@@ -574,10 +574,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: hidden;
+    white-space: nowrap;
 
     li {
       display: block;
       padding: 4px 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     a {
